--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent" />
 
     <Button
-        android:id="@+id/myButton"
+        android:id="@+id/buttonListTrips"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
